# romira-s_service_manage_bot

./: .gitignore  Cargo.toml  README.md  git-restore-mtime.py  post.sh
.config.example/: bot_config.toml  home_server_config.toml
.github/workflows/: cargo.yml  deploy-discord_bot_client.yml  deploy-homeserver_receive_process.yml
colab-cli/: main.py
discord_bot_client/: Cargo.toml
discord_bot_client/src/: bot_config.rs  commands.rs  lib.rs  main.rs  models.rs  state.rs
discord_bot_client/src/commands/: activity.rs  ai.rs  ark.rs  ark_second.rs  conversation.rs  enquete.rs  minecraft.rs  sdtd.rs  simple.rs  terraria.rs  valheim.rs
discord_bot_client/src/commands/ark/: ark_first.rs  ark_fourth.rs  ark_second.rs  ark_third.rs
discord_bot_client/src/commands/conversation/: embed.rs
discord_bot_client/tests/: minecraft.rs
homeserver_receive_process/: Cargo.toml
homeserver_receive_process/src/: home_server_config.rs  lib.rs  main.rs  models.rs
valheim_connection_check/: Cargo.toml
