[package]
edition = "2018"
name = "discord_bot_client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
getset = "0.1.1"
homeserver_receive_process = {path = "../homeserver_receive_process"}
log = "0.4.14"
reqwest = {version = "0.11.4", features = ["json"]}
serde = "1.0.126"
serde_json = "1.0.66"
serenity = {version = "0.10.8", features = ["client", "framework", "standard_framework", "rustls_backend"]}
simplelog = "0.10.0"
tokio = {version = "1.9.0", features = ["macros", "signal", "rt-multi-thread"]}
toml = "0.5.8"
