[package]
edition = "2018"
name = "discord_bot_client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
counted-array = "0.1.2"
dotenv = "0.15.0"
duct = "0.13.5"
getset = "0.1.1"
homeserver_receive_process = {path = "../homeserver_receive_process"}
image = "0.24.4"
log = "0.4.14"
nix = "0.25.0"
openssl = {version = "0.10.41", features = ["vendored"]}
rand = {version = "0.8.5", features = ["alloc"]}
regex = "1.6.0"
reqwest = {version = "0.11.4", features = ["json"]}
serde = "1.0.126"
serde_json = "1.0.66"
serenity = {version = "0.10.8", features = ["client", "framework", "standard_framework", "rustls_backend"]}
simplelog = "0.10.0"
tokio = {version = "1.9.0", features = ["macros", "signal", "rt-multi-thread", "time"]}
toml = "0.5.8"
