[package]
edition = "2018"
name = "homeserver_receive_process"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-web = "4.1.0"

derive_builder = "0.10.2"
duct = "0.13.5"
getset = "0.1.1"
log = "0.4.17"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.66"
simplelog = "0.12.0"
toml = "0.5.8"
